--- a/GroceryApp/Base.lproj/Main.storyboard
+++ b/GroceryApp/Base.lproj/Main.storyboard
@@ -23,19 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="-2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Grocery" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rew-OK-zdQ">
-                                <rect key="frame" x="98" y="86" width="178" height="62.5"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.10000000000000001" height="1"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="62.5" id="dFV-fo-8SB"/>
-                                    <constraint firstAttribute="width" constant="178" id="yti-MZ-IjS"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="50"/>
-                                <color key="textColor" red="0.98203397424594085" green="0.95229877588119161" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="highlightedColor" red="0.97557129620000005" green="0.95268933369999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="shadowColor" red="0.97557129620000005" green="0.95268933369999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </label>
-                            <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jqp-Tl-0ST">
+                            <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jqp-Tl-0ST">
                                 <rect key="frame" x="86" y="423" width="202" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -49,7 +37,7 @@
                                     <action selector="didClickLogIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kNb-4g-vYf"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LXV-Ss-9Cj">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LXV-Ss-9Cj">
                                 <rect key="frame" x="86" y="467" width="202" height="30"/>
                                 <color key="backgroundColor" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -64,16 +52,16 @@
                                     <action selector="didClickSignUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VYJ-Kr-Mce"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrP-nD-VU7">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrP-nD-VU7">
                                 <rect key="frame" x="86" y="379" width="202" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="cjy-88-w8J"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ppt-HQ-y5P">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ppt-HQ-y5P">
                                 <rect key="frame" x="86" y="335" width="202" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="zEi-6N-eZL"/>
@@ -82,12 +70,24 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="-2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grocery" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rew-OK-zdQ">
+                                <rect key="frame" x="98" y="108" width="178" height="62.5"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.10000000000000001" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62.5" id="dFV-fo-8SB"/>
+                                    <constraint firstAttribute="width" constant="178" id="yti-MZ-IjS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="50"/>
+                                <color key="textColor" red="0.98203397424594085" green="0.95229877588119161" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="highlightedColor" red="0.97557129620000005" green="0.95268933369999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="shadowColor" red="0.97557129620000005" green="0.95268933369999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.65098039215686276" blue="0.49019607843137253" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jqp-Tl-0ST" secondAttribute="trailing" constant="87" id="1vZ-Nr-E3u"/>
-                            <constraint firstItem="Rew-OK-zdQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="3cY-AN-ehj"/>
-                            <constraint firstItem="Ppt-HQ-y5P" firstAttribute="top" secondItem="Rew-OK-zdQ" secondAttribute="bottom" constant="186.5" id="4Bx-4b-mNt"/>
+                            <constraint firstItem="Rew-OK-zdQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="88" id="3cY-AN-ehj"/>
+                            <constraint firstItem="Ppt-HQ-y5P" firstAttribute="top" secondItem="Rew-OK-zdQ" secondAttribute="bottom" constant="164.5" id="4Bx-4b-mNt"/>
                             <constraint firstItem="Ppt-HQ-y5P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="86" id="7Tv-Y2-Yci"/>
                             <constraint firstItem="IrP-nD-VU7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="86" id="Fhv-0M-a7V"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IrP-nD-VU7" secondAttribute="trailing" constant="87" id="LfF-wN-bm6"/>
